refactoring#3 - modifly the resule

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 			   if(validata(t)==0) return;
             var result = calculate(t,u);
 		
-			   alert("Temperature is "+t1+" in "+u1);
+			   alert("Temperature is "+result.temp+" in "+result.unti);
 			});
 		});
 	</script>
